# fastm

./: .gitignore  .travis.yml  README.md  dir_000000_000002.html  dir_000001_000000.html  dir_000001_000002.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_5c982d53a68cdbcd421152b4020263a9_dep.map  dir_5c982d53a68cdbcd421152b4020263a9_dep.md5  dir_ae8038478357ccb46dba7106f6b33013.html  dir_ae8038478357ccb46dba7106f6b33013.js  dir_ae8038478357ccb46dba7106f6b33013_dep.map  dir_ae8038478357ccb46dba7106f6b33013_dep.md5  dir_c3d9a02bf093bd097bca5c617b5db980.html  dir_c3d9a02bf093bd097bca5c617b5db980.js  files.html  files.js  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces.js  navtreedata.js  navtreeindex0.js
BH/: CMakeLists.txt  defaults.txt  options.txt  optionsBIE.txt  optionsNBODY.txt  optionsVP.txt
BH/doc/: Doxyfile
BH/src/BarnesHut/: BarnesHut.cpp  BarnesHut.h
BH/src/Logo/: Logo.h
BH/src/Methods/: Methods.h
BH/src/Params/: Params.h
BH/src/PointsCopy/: PointsCopy.h
BH/src/Preprocessor/: Preprocessor.cpp  Preprocessor.h
BH/src/StreamParser/: StreamParser.h  StreamParserDefs.cpp  StreamParserDefs.h
BH/src/Tree/: Tree.cpp  Tree.h
BH/src/defs/: defs.h
BH/src/main/: main.cpp
BHcu/: ADDITIONAL_TERMS  CMakeLists.txt
BHcu/src/GPU/: cuKernels.cu  cuKernels.cuh
BHcu/src/Logo/: Logo.h
BHcu/src/Params/: Params.h
BHcu/src/main/: main.cpp
BHcu/src/operations/: operations.cuh
BHgpu/: CMakeLists.txt
BHgpu/doc/: Doxyfile
BHgpu/src/GPU/: SummKernelFabric.nb  cuKernels.cu  cuKernels.cuh  cuSort.cu  cuSort.cuh
BHgpu/src/Logo/: Logo.h
BHgpu/src/Params/: Params.h
BHgpu/src/main/: main.cpp
BHgpu/src/operations/: operations.cuh
FFT/: CMakeLists.txt
FMM/: CMakeLists.txt
FMM/src/BinomNewton/: BinomNewton.h
FMM/src/Cell/: Cell.cpp  Cell.h
FMM/src/FastMultipole/: FastMultipole.cpp  FastMultipole.h
FMM/src/Logo/: Logo.h
FMM/src/Params/: Params.h
FMM/src/Particle/: Particle.cpp  Particle.h
FMM/src/Tree/: Tree.cpp  Tree.h
FMM/src/main/: main.cpp
d0/d82/: _params_8h__incl.map  _params_8h__incl.md5
d0/def/: _logo_8h__dep__incl.map  _logo_8h__dep__incl.md5
d1/df0/: _params_8h.html  _params_8h.js  _params_8h_source.html
d4/daf/: _logo_8h.html  _logo_8h.js  _logo_8h_source.html
d8/df3/: _logo_8h__incl.map  _logo_8h__incl.md5
d9/d45/: namespace_b_hcu.html  namespace_b_hcu_a33e8e010edf236a551fec9faf9c339f6_icgraph.map  namespace_b_hcu_a33e8e010edf236a551fec9faf9c339f6_icgraph.md5  namespace_b_hcu_a6f7b748b774a8c1e7f309e9d7bfaddb4_icgraph.map  namespace_b_hcu_a6f7b748b774a8c1e7f309e9d7bfaddb4_icgraph.md5  namespace_b_hcu_ad09cf09c2a0f1e2a3e4dbe0ab86cf298_icgraph.map  namespace_b_hcu_ad09cf09c2a0f1e2a3e4dbe0ab86cf298_icgraph.md5  namespace_b_hcu_ada7d2b49f8b1fe68dfd982472539418f_icgraph.map  namespace_b_hcu_ada7d2b49f8b1fe68dfd982472539418f_icgraph.md5  namespace_b_hcu_add03c379e6939969185f703a3ce6ced8_icgraph.map  namespace_b_hcu_add03c379e6939969185f703a3ce6ced8_icgraph.md5
da/d70/: _params_8h__dep__incl.map  _params_8h__dep__incl.md5
da/dce/: main_8cpp__incl.map  main_8cpp__incl.md5
df/d0a/: main_8cpp.html  main_8cpp.js  main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  main_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  main_8cpp_add43a7ed7d8748b05b2e3c3da59fa0e8_icgraph.map  main_8cpp_add43a7ed7d8748b05b2e3c3da59fa0e8_icgraph.md5  main_8cpp_source.html
include/Point2D/: Point2D.h
include/Vortex2D/: Vortex2D.cpp  Vortex2D.h
include/numvector/: numvector.h
res/: Ellipse-2ord-paramphi_Cpp2.nb  ExactCircle1000-const-0.txt  ExactCircle1000-linear-0.txt  ExactCircle16000-linear-0.txt  ExactCircle16000-linear-1.txt  ExactCircle2000-linear-0.txt  ExactCircle2x1000-const-0.txt  ExactCircle2x1000-const-1.txt  ExactCircle2x1000-linear-0.txt  ExactCircle2x1000-linear-1.txt  ExactCircle32000-const.txt  ExactCircle32000-linear.txt  ExactCircle4x1000-const-0.txt  ExactCircle4x1000-const-1.txt  ExactCircle4x1000-const-2.txt  ExactCircle4x1000-const-3.txt  ExactCircle4x1000-linear-0.txt  ExactCircle4x1000-linear-1.txt  ExactCircle4x1000-linear-2.txt  ExactCircle4x1000-linear-3.txt  ExactCircle8000-linear-0.txt  ExactCircle8000-linear-1.txt  ExactCircle9x1000-const-0.txt  ExactCircle9x1000-const-1.txt  ExactCircle9x1000-const-2.txt  ExactCircle9x1000-const-3.txt  ExactCircle9x1000-const-4.txt  ExactCircle9x1000-const-5.txt  ExactCircle9x1000-const-6.txt  ExactCircle9x1000-const-7.txt  ExactCircle9x1000-const-8.txt  ExactCircle9x1000-linear-0.txt  ExactCircle9x1000-linear-1.txt  ExactCircle9x1000-linear-2.txt  ExactCircle9x1000-linear-3.txt  ExactCircle9x1000-linear-4.txt  ExactCircle9x1000-linear-5.txt  ExactCircle9x1000-linear-6.txt  ExactCircle9x1000-linear-7.txt  ExactCircle9x1000-linear-8.txt  (+34 more)
res/MVE2D/: CCode-MVE2D.nb  main.cpp  numvector.h  source.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_2.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
test/: VPpointsGenerator.nb  pointsGenerator.nb  test10000.txt
test/CMatr/: C_calc-FFT-func.nb
test/Circle/: Circle100.txt  Circle1000.txt  Circle16000.txt  Circle200.txt  Circle2000.txt  Circle32000.txt  Circle400.txt  Circle4000.txt  Circle64000.txt  Circle8000.txt
test/Ellipse2x1/: Ellipse1000.txt  Ellipse2000.txt  Ellipse4000.txt  Ellipse8000.txt
test/Ellipse4x1/: Ellipse12800.txt  Ellipse200.txt  Ellipse3200.txt  Ellipse800.txt
test/VP/: vp2106.txt  vp216.txt  vp396.txt  vp4.txt  vp576.txt  vp601.txt  vp6561.txt  vp671.txt
test/Wake/: wake0.txt  wake20k.txt  wake50k.txt
test/Wing/: ExactWing128.txt  ExactWing128as.txt  wing128.txt  wing128.txtSol  wing128.txtSolAs
(+23 files in other folders)
